<resources>
    <string name="app_name">Wizard_World</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Wizard World</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_elixirs">Elixirs</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_houses">Houses</string>
    <string name="menu_spells">Spells</string>
    <string name="menu_wizard">Wizard</string>
</resources>